--- a/WP_sites/index.html
+++ b/WP_sites/index.html
@@ -82,7 +82,7 @@
                                 <p class="card-text">Healthcare staffing website. Includes CRM integration, interactive forms, and downloadable documents.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="https://olmoweinman.com/" class="btn btn-sm btn-outline-secondary">Project Details</a>
+                                        <a href="tdy.html" class="btn btn-sm btn-outline-secondary">Project Details</a>
                                         <a href="https://www.tdyjobs.com/" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Website</a>
                                     </div>
                                     <!--<small class="text-muted">9 mins</small>-->
@@ -97,7 +97,7 @@
                                 <p class="card-text">Veteran-owned consulting & staff augmentation firm. Interactive form & document download. Redesigned 2020.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="https://olmoweinman.com/" target="_blank" class="btn btn-sm btn-outline-secondary">Project Details</a>
+                                        <a href="ega.html" target="_blank" class="btn btn-sm btn-outline-secondary">Project Details</a>
                                     </div>
                                     <!--<small class="text-muted">9 mins</small>-->
                                 </div>
@@ -112,7 +112,7 @@
                                 <p class="card-text">Lifestyle photographer site. Portfolio, eCommerce, appointment bookings, & secure client galleries. <span class="font-italic">Client maintains.</span></p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="https://olmoweinman.com/" class="btn btn-sm btn-outline-secondary">Project Details</a>
+                                        <a href="lisad.html" class="btn btn-sm btn-outline-secondary">Project Details</a>
                                         <a href="https://lisaduckettphotography.com/" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Website</a>
                                     </div>
 
@@ -127,7 +127,7 @@
                                 <p class="card-text">Site for community elder services and transportation organization. Mostly informational, with interactive form.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="https://olmoweinman.com/" class="btn btn-sm btn-outline-secondary">Project Details</a>
+                                        <a href="cassco.html" class="btn btn-sm btn-outline-secondary">Project Details</a>
                                         <a href="http://casstransit.com/" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Website</a>
                                     </div>
                                     
@@ -142,7 +142,7 @@
                                 <p class="card-text">My first portfolio. Project gallery, contact form, custom 404 page, and eCommerce for my book.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="https://olmoweinman.com/" class="btn btn-sm btn-outline-secondary">Project Details</a>
+                                        <a href="beth.html" class="btn btn-sm btn-outline-secondary">Project Details</a>
                                         <a href="https://betholmo.com/" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Website</a>
                                     </div>
                                     
