--- a/WP_sites/lisad.html
+++ b/WP_sites/lisad.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Original Portfolio | Beth Olmo</title>
+    <title>Lisa Duckett Photography | Beth Olmo</title>
 
     <link href="CSS/bootstrap.css" rel="stylesheet" />
     <link href="CSS/album.css" rel="stylesheet" />
@@ -21,9 +21,9 @@
             <div class="container d-flex justify-content-lg-between">
                 <a href="#" class="navbar-brand d-flex align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="mr-2" viewBox="0 0 24 24" focusable="false"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" /><circle cx="12" cy="13" r="4" /></svg>
-                    <strong>Olmo Weinman</strong>
+                    <strong>Lisa Duckett Photography</strong>
                 </a>
-                <a href="https://olmoweinman.com/" target="_blank" class="btn btn-outline-light">Live Site</a>
+                <a href="https://lisaduckettphotography.com/portfolio/" target="_blank" class="btn btn-outline-light">Live Site</a>
                 <a href="/index.html" class="btn btn-outline-light">Back</a>
             </div>
         </div>
@@ -34,10 +34,10 @@
 
         <div class="row justify-content-center mt-xl-5">
             <div class="card align-content-center" style="width: 80rem;">
-                <img src="/IMG/OWC_960x540.png" class="card-img-top" alt="...">
+                <img src="/IMG/LisaHome960x540.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">PMP Training and Web Services</h5>
-                    <p class="card-text">I was my own client on this one! Olmo Weinman is the professional services firm my husband and I founded. We needed a fairly robust site where we could market and host online courses.</p>
+                    <h5 class="card-title">Lifestyle Photographer</h5>
+                    <p class="card-text">Lisa had outgrown the site she had on a photographers' CMS. We discussed what she needed from her website, and I built her a beautiful site that supports her current operations and will grow with her.</p>
                 </div>
             </div>
         </div>
@@ -52,9 +52,9 @@
 
         <div class="row justify-content-center mt-xl-5">
             <div class="card align-content-center" style="width: 80rem;">
-                <img src="/IMG/OWCOJO_960x540.png" class="card-img-top" alt="...">
+                <img src="/IMG/LisaPortf960x540.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Professional Speaker / Trainer Bio Page</h5>
+                    <h5 class="card-title">Portfolio</h5>
                 </div>
             </div>
         </div>
@@ -63,18 +63,18 @@
 
         <div class="row justify-content-center mt-xl-5">
             <div class="card align-content-center" style="width: 80rem;">
-                <img src="/IMG/OWCecomm_960x540.png" class="card-img-top" alt="...">
+                <img src="/IMG/LisaClientLog960x540.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Secure eCommerce Integration</h5>
+                    <h5 class="card-title">Client Galleries LogIn</h5>
                 </div>
             </div>
         </div>
 
         <div class="row justify-content-center mt-xl-5">
             <div class="card align-content-center" style="width: 80rem;">
-                <img src="/IMG/OWC_student_960x540.png" class="card-img-top" alt="...">
+                <img src="/IMG/LisaAppts960x934.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Student Account and Course Login</h5>
+                    <h5 class="card-title">Appointment Booking</h5>
                 </div>
             </div>
         </div>
