--- a/WP_sites/ega.html
+++ b/WP_sites/ega.html
@@ -9,6 +9,9 @@
     <link href="CSS/bootstrap.css" rel="stylesheet" />
     <link href="CSS/album.css" rel="stylesheet" />
 
+    <!-- Favicon -->
+    <link rel="icon" href="/IMG/WPMiniSite150.png" />
+    <!-- / -->
 
 
 </head>
