--- a/WP_sites/beth.html
+++ b/WP_sites/beth.html
@@ -9,7 +9,9 @@
     <link href="CSS/bootstrap.css" rel="stylesheet" />
     <link href="CSS/album.css" rel="stylesheet" />
 
-    -
+    <!-- Favicon -->
+    <link rel="icon" href="/IMG/WPMiniSite150.png" />
+    <!-- / -->
 
 </head>
 <body class="w-100">
