--- a/WP_sites/index.html
+++ b/WP_sites/index.html
@@ -9,6 +9,10 @@
     <link href="CSS/bootstrap.css" rel="stylesheet" />
     <link href="CSS/album.css" rel="stylesheet" />
 
+    <!-- Favicon -->
+    <link rel="icon" href="/IMG/WPMiniSite150.png" />
+    <!-- / -->
+
 
 
 </head>
@@ -97,7 +101,7 @@
                                 <p class="card-text">Veteran-owned consulting & staff augmentation firm. Interactive form & document download. Redesigned 2020.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="ega.html" target="_blank" class="btn btn-sm btn-outline-secondary">Project Details</a>
+                                        <a href="ega.html" class="btn btn-sm btn-outline-secondary">Project Details</a>
                                     </div>
                                     <!--<small class="text-muted">9 mins</small>-->
                                 </div>
