--- a/WP_sites/tdy.html
+++ b/WP_sites/tdy.html
@@ -8,7 +8,9 @@
 
     <link href="CSS/bootstrap.css" rel="stylesheet" />
     <link href="CSS/album.css" rel="stylesheet" />
-
+    <!-- Favicon -->
+    <link rel="icon" href="/IMG/WPMiniSite150.png" />
+    <!-- / -->
 
 
 </head>
