--- a/WP_sites/beth.html
+++ b/WP_sites/beth.html
@@ -74,7 +74,7 @@
         <br />
 
         <div class="row justify-content-center mt-xl-2 mb-xl-5">
-            <a href="#main" target="_blank" class="btn btn-outline-secondary">Back to Top</a>
+            <a href="#main" class="btn btn-outline-secondary">Back to Top</a>
 
         </div>
 
