--- a/WP_sites/index.html
+++ b/WP_sites/index.html
@@ -56,7 +56,7 @@
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a href="/owc.html" class="btn btn-sm btn-outline-secondary">Project Details</a>
-                                        <a href="https://olmoweinman.com/" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Website</a>
+                                        <a href="https://olmoweinman.netlify.app/" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Website</a>
                                     </div>
                                     
                                 </div>
