--- a/WP_sites/index.html
+++ b/WP_sites/index.html
@@ -39,7 +39,7 @@
         <section class="jumbotron text-center">
             <div class="container">
                 <h1>WordPress Projects</h1>
-                <p class="lead text-muted">My background is in WordPress and Front End work, both agency and freelance. These are my freelance builds and redesigns.</p>
+                <p class="lead text-muted">I started out in WordPress and Front End work, both agency and freelance. These are my freelance builds and redesigns.</p>
                 
             </div>
         </section>
@@ -56,7 +56,7 @@
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a href="/owc.html" class="btn btn-sm btn-outline-secondary">Project Details</a>
-                                        <a href="https://olmoweinman.netlify.app/" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Website</a>
+                                        <a href="https://olmoweinman.com/" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Website</a>
                                     </div>
                                     
                                 </div>
