--- a/WP_sites/index.html
+++ b/WP_sites/index.html
@@ -101,7 +101,7 @@
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a href="lisad.html" class="btn btn-sm btn-outline-secondary">Project Details</a>
-                                        <a href="https://lisaduckettphotography.com/" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Website</a>
+                                        <!-- <a href="https://lisaduckettphotography.com/" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Website</a> -->
                                     </div>
 
                                 </div>
